--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:targetApi="31"
         android:theme="@style/Theme.MyApp">
         <activity
+            android:name="com.meshkipli.smarttravel.OnBoardingActivity"
+            android:exported="false" />
+        <activity
             android:exported="true"
             android:name="com.meshkipli.smarttravel.MainActivity"
             android:theme="@style/Theme.App.Starting">
