--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
             android:name="com.meshkipli.smarttravel.OnBoardingActivity"
             android:exported="false" />
         <activity
+            android:name="com.meshkipli.smarttravel.SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.meshkipli.smarttravel.SignUpActivity"
+            android:exported="false" />
+        <activity
             android:exported="true"
             android:name="com.meshkipli.smarttravel.MainActivity"
             android:theme="@style/Theme.App.Starting">
