--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,29 +12,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:targetApi="31"
-        android:theme="@style/Theme.SmartTravel">
+        android:theme="@style/Theme.MyApp">
         <activity
             android:name=".HomeActivity"
-            android:exported="true"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
-            android:exported="false"
-            android:name=".SignInActivity" />
-        <activity
-            android:exported="false"
-            android:name=".SignUpActivity" />
-        <activity
-            android:name=".OnBoardingActivity"
+            android:name="com.meshkipli.smarttravel.OnBoardingActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.meshkipli.smarttravel.SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.meshkipli.smarttravel.SignUpActivity"
+            android:exported="false" />
+        <activity
             android:exported="true"
+            android:name="com.meshkipli.smarttravel.MainActivity"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
