--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,17 @@
             android:exported="false">
         </activity>
         <activity
-            android:name="com.meshkipli.smarttravel.OnBoardingActivity"
+            android:name=".OnBoardingActivity"
             android:exported="false" />
         <activity
-            android:name="com.meshkipli.smarttravel.SignInActivity"
+            android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name="com.meshkipli.smarttravel.SignUpActivity"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:exported="true"
-            android:name="com.meshkipli.smarttravel.MainActivity"
+            android:name=".MainActivity"
             android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
