Change "Itinerary Form" to "Itinerary" and icon from "Scan" to "Add Itinerary"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             android:exported="false">
         </activity>
         <activity
+            android:name=".AddItineraryActivity"
+            android:exported="false" />
+        <activity
             android:name=".OnBoardingActivity"
             android:exported="false" />
         <activity
