--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         tools:targetApi="31"
         android:theme="@style/Theme.MyApp">
         <activity
+            android:exported="true"
+            android:name=".MainActivity"
+            android:theme="@style/Theme.App.Starting">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".HomeActivity"
             android:exported="false">
         </activity>
@@ -30,15 +40,9 @@
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
-            android:exported="true"
-            android:name=".MainActivity"
-            android:theme="@style/Theme.App.Starting">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".TripDetailsActivity"
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+</application>
 
 </manifest>
