feat: Add ScheduleTripActivity and screen
This commit introduces a new `ScheduleTripActivity` and its corresponding `ScheduleTripScreen` composable.

The `ScheduleTripActivity` is responsible for displaying the trip scheduling interface.
The `ScheduleTripScreen` currently shows a placeholder text and includes a top app bar with a title and a back navigation button.

The activity has also been added to the `AndroidManifest.xml`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,10 @@
         <activity
             android:name=".TripDetailsActivity"
             android:exported="false" />
+        <activity
+            android:name=".ScheduleTripActivity"
+            android:exported="false" />
 
-</application>
+    </application>
 
 </manifest>
