--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity
             android:name=".ScheduleTripActivity"
             android:exported="false" />
+        <activity
+            android:name=".MapActivity"
+            android:exported="false" />
 
     </application>
 
